--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+pandas = "^2.2.3"
+xgboost = "^2.1.2"
+sqlalchemy = "^2.0.36"
 
 
 [build-system]
