--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,14 @@ version = "0.1.0"
 description = ""
 authors = ["j.suess <jonas.suess@tum.de>"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.12"
 pandas = "^2.2.3"
 xgboost = "^2.1.2"
 sqlalchemy = "^2.0.36"
+psycopg = "^3.2.3"
 
 
 [build-system]
