--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ xgboost = "^2.1.2"
 sqlalchemy = "^2.0.36"
 psycopg = "^3.2.3"
 python-dotenv = "^1.0.1"
+statsmodels = "^0.14.4"
+ipykernel = "^6.29.5"
 
 
 [build-system]
