--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ psycopg = "^3.2.3"
 python-dotenv = "^1.0.1"
 statsmodels = "^0.14.4"
 ipykernel = "^6.29.5"
+matplotlib = "^3.9.2"
 
 
 [build-system]
