--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ xgboost = "^2.1.2"
 sqlalchemy = "^2.0.36"
 psycopg = "^3.2.3"
 python-dotenv = "^1.0.1"
+scikit-learn = "^1.5.2"
 
 
 [build-system]
