--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ python-dotenv = "^1.0.1"
 statsmodels = "^0.14.4"
 ipykernel = "^6.29.5"
 matplotlib = "^3.9.2"
+seaborn = "^0.13.2"
 
 
 [build-system]
