--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ gluonts = "^0.16.0"
 torch = "^2.5.1"
 lightning = "^2.4.0"
 psycopg-binary = "^3.2.3"
+fastapi = "^0.115.5"
+uvicorn = "^0.32.1"
 
 
 [build-system]
